<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.devdd.recipe.ui.profile.ProfileViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile_fragment_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/profile_fragment_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bottom_nav_menu_label_profile"
            android:textAlignment="center"
            android:textAppearance="?textAppearanceHeadline5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/profile_fragment_action_change_language_pref"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:onClick="@{()->viewModel.navigateToChangeLanguage()}"
            android:padding="16dp"
            android:text="@string/profile_option_change_language"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="?textAppearanceButton"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_fragment_heading" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/profile_fragment_action_change_recipe_pref"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:onClick="@{()->viewModel.navigateToChangeRecipePref()}"
            android:padding="16dp"
            android:text="@string/profile_option_change_recipe_pref"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="?textAppearanceButton"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_fragment_action_change_language_pref" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/profile_fragment_action_dev_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:onClick="@{()->viewModel.navigateToDeveloperOption()}"
            android:padding="16dp"
            android:text="@string/profile_option_dev_options"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="?textAppearanceButton"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_fragment_action_change_recipe_pref" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>